PyMaker/datas/object2/RawHTML/i18101/Python_DOC_referPages.invalid-syntax-in-python-script.txt
<div class="post-text" itemprop="text">
<pre><code>Python 2.7.5 (default, May 15 2013, 22:44:16) [MSC v.1500 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.

Imported NumPy 1.7.1, SciPy 0.12.0, Matplotlib 1.3.0 + guidata 1.6.1, guiqwt 2.3.1
Type "scientific" for more details.
&gt;&gt;&gt; runfile('C:/Program Files (x86)/Firaxis Games/Sid Meier's Pirates!/ModMan/MM.py', wdir=r'C:/Program Files (x86)/Firaxis Games/Sid Meier's Pirates!/ModMan')
  File "&lt;stdin&gt;", line 1
    runfile('C:/Program Files (x86)/Firaxis Games/Sid Meier's Pirates!/ModMan/MM.py', wdir=r'C:/Program Files (x86)/Firaxis Games/Sid Meier's Pirates!/ModMan')
                                                            ^
SyntaxError: invalid syntax
&gt;&gt;&gt; 
</code></pre>
<p>Running Windows 7 x64/, WinPython 275, Spyder 2.7. This is run using the spyder GUI. When the (<code>MM.py</code>) copy in the python folder is run it works. BTW This is point and click I'm not typing anything.  </p>
</div>
<div class="post-text" itemprop="text">
<p>Use <code>"</code> instead of <code>'</code>:</p>
<pre><code>runfile("C:/Program Files (x86)/Firaxis Games/Sid Meier's Pirates!/ModMan/MM.py", wdir=r"C:/Program Files (x86)/Firaxis Games/Sid Meier's Pirates!/ModMan")
</code></pre>
<p>Stack Overflow is nice enough to highlight your invalid syntax for you.</p>
<p>If some tool (spyder GUI) executes this invalid code, go get a better tool.</p>
</div>
<div class="post-text" itemprop="text">
<p>To actually explain the problem: Strings can be enquoted within double quotes <code>"</code> and single quotes <code>'</code>. It does not make a difference which of these two you use, as long as the string starts and ends with the same symbol. So <code>"Hello"</code> is the same string as <code>'Hello'</code>.</p>
<p>The string ends, as soon as the quote character appears for the second time. So in your case, <code>'Sid Meier's Pirates'</code>, the string already ends after <code>Meier</code>, making the rest of it not a string but normal Python code the interpreter tries to interpret (which will usually fail).</p>
<p>So to use the quotation character within the string itself, you will need to <a href="http://docs.python.org/3/tutorial/introduction.html#strings" rel="nofollow">escape</a> the quotation mark. So for single quoted strings, you can use <code>\'</code> and for double quoted strings <code>\"</code>.</p>
<p>So in your case, you could write <code>'Sid Meier\'s Pirates'</code> and it would be a valid string.</p>
<p>The other option would be to switch the quotation characters to double quotes. That way you would not have to escape single quotation characters within the string (but double quotation characters): <code>"Sid Meier's Pirates"</code>.</p>
</div>
<span class="comment-copy">That is some ugly directory name: <code>Sid Meier's Pirates!</code>.</span>
<span class="comment-copy">@LutzHorn What's the problem? A clean program can handle this.</span>
<span class="comment-copy">Yes, a clean program. But obviously not the tool the OP is using.</span>
<span class="comment-copy">@LutzHorn Right. My point is, such directory names are not ugly, but very helpful for identifying such unclean programs.</span>
<span class="comment-copy">Imported NumPy 1.7.1, SciPy 0.12.0, Matplotlib 1.3.0 + guidata 1.6.1, guiqwt 2.3.1 Type "scientific" for more details. &gt;&gt;&gt; runfile('C:/WinPython-64bit-2.7.5.3/ModMan.py', wdir=r'C:/WinPython-64bit-2.7.5.3') m(od) or u(nmod)</span>
<span class="comment-copy">People I AM NOT TYPING ANYTHING. I am not quoting anything. This is the output from the spyder GUI in response to winpython runfile. It does not work in spyder OR off the command line.</span>
<span class="comment-copy">Please don't shout.</span>
<span class="comment-copy">I installed spyder and WinPython as a complete package. Obviously something went wrong, or it does not configure well. Downloaded from python the 2.7.5.3 64 bit package and then downloaded PyScripter. Life is good again.</span>
<span class="comment-copy">Pleaase see above comment. There is no reason to show the MM.py code as it NEVER starts. It fails to run both in spyder and on the command line. HOWEVER the exact same script placed in the python installation folder (C:\WinPython-64bit-2.7.5.3) WORKS!</span>
<span class="comment-copy">Well, I have no idea what you are doing. All I can see from your Python session in the question is that you apparently tried to run <code>runFile</code> with a filename as its parameter; and that filename—the string—isn’t quoted correctly. Of course if you use the path <code>C:\WinPython-64bit-2.7.5.3</code> it works because there are no quotation marks within the path, so the error can’t happen there.</span>
<span class="comment-copy">"you apparently" implies i typed the quoted strings I did NOT. point and click with a mouse. This is windows 7 not dos. This every character every character is printed by the spyder IDE. I am assuming there are some under the hood settings in pyhton and or spyder that need to be checked or changed. I am not familiar enough with either program to know what that is. IE are there path environments that can and need to be changed in either of these? programs.</span>
